index carousel update

--- a/index.html
+++ b/index.html
@@ -63,31 +63,18 @@
                             aria-label="Slide 2"></button>
                         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                             aria-label="Slide 3"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
-                            aria-label="Slide 4"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
-                            aria-label="Slide 5"></button>
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./images/low_adrenaline_adventure/136.jpg" class="d-block w-100" alt="Canada">
+                            <img src="./images/no bildes/2461292.jpg" class="d-block w-100" alt="Canada">
                         </div>
                         <div class="carousel-item">
-                            <img src="./images/low_adrenaline_adventure/2521984197.jpg" class="d-block w-100"
-                                alt="Oceania">
+                            <img src="./images/no bildes/green-island-beach-background-1920x600-275.jpg"
+                                class="d-block w-100" alt="Oceania">
                         </div>
                         <div class="carousel-item">
-                            <img src="./Images/low_adrenaline_adventure/gYnm1l.jpg" class="d-block w-100"
-                                alt="Switzerland">
+                            <img src="./Images/no bildes/oceania.jpg" class="d-block w-100" alt="Switzerland">
                         </div>
-                        <div class="carousel-item">
-                            <img src="./Images/low_adrenaline_adventure/scorpio.jpg" class="d-block w-100"
-                                alt="Bora-Bora">
-                        </div>
-                        <!-- <div class="carousel-item">
-                        <img src="./Images/carousel images/1920x600/japan.jpg" class="d-block w-100"
-                            alt="Japan">
-                    </div> -->
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
                         data-bs-slide="prev">
@@ -117,31 +104,18 @@
                             aria-label="Slide 2"></button>
                         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                             aria-label="Slide 3"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
-                            aria-label="Slide 4"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
-                            aria-label="Slide 5"></button>
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./images/low_adrenaline_adventure/136.jpg" class="d-block w-100" alt="Canada">
+                            <img src="./images/no bildes/2461292.jpg" class="d-block w-100" alt="Canada">
                         </div>
                         <div class="carousel-item">
-                            <img src="./images/low_adrenaline_adventure/2521984197.jpg" class="d-block w-100"
-                                alt="Oceania">
+                            <img src="./images/no bildes/green-island-beach-background-1920x600-275.jpg"
+                                class="d-block w-100" alt="Oceania">
                         </div>
                         <div class="carousel-item">
-                            <img src="./Images/low_adrenaline_adventure/gYnm1l.jpg" class="d-block w-100"
-                                alt="Switzerland">
+                            <img src="./Images/no bildes/oceania.jpg" class="d-block w-100" alt="Switzerland">
                         </div>
-                        <div class="carousel-item">
-                            <img src="./Images/low_adrenaline_adventure/scorpio.jpg" class="d-block w-100"
-                                alt="Bora-Bora">
-                        </div>
-                        <!-- <div class="carousel-item">
-                                <img src="./Images/carousel images/1920x600/japan.jpg" class="d-block w-100"
-                                    alt="Japan">
-                            </div> -->
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
                         data-bs-slide="prev">
@@ -171,31 +145,18 @@
                             aria-label="Slide 2"></button>
                         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                             aria-label="Slide 3"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
-                            aria-label="Slide 4"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
-                            aria-label="Slide 5"></button>
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./images/low_adrenaline_adventure/136.jpg" class="d-block w-100" alt="Canada">
+                            <img src="./images/no bildes/2461292.jpg" class="d-block w-100" alt="Canada">
                         </div>
                         <div class="carousel-item">
-                            <img src="./images/low_adrenaline_adventure/2521984197.jpg" class="d-block w-100"
-                                alt="Oceania">
+                            <img src="./images/no bildes/green-island-beach-background-1920x600-275.jpg"
+                                class="d-block w-100" alt="Oceania">
                         </div>
                         <div class="carousel-item">
-                            <img src="./Images/low_adrenaline_adventure/gYnm1l.jpg" class="d-block w-100"
-                                alt="Switzerland">
+                            <img src="./Images/no bildes/oceania.jpg" class="d-block w-100" alt="Switzerland">
                         </div>
-                        <div class="carousel-item">
-                            <img src="./Images/low_adrenaline_adventure/scorpio.jpg" class="d-block w-100"
-                                alt="Bora-Bora">
-                        </div>
-                        <!-- <div class="carousel-item">
-                        <img src="./Images/carousel images/1920x600/japan.jpg" class="d-block w-100"
-                            alt="Japan">
-                    </div> -->
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
                         data-bs-slide="prev">
@@ -210,26 +171,27 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural
-                        lead-in to
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                         additional
                         content. This content is a little bit longer.</p>
                     <a href="#" class="btn btn-primary">Price</a>
                 </div>
             </div>
         </div>
-        <div class="row footer-row mt-5">
-            <div class="footer-text my-3 text-center">
-                <h5>Contacts</h5>
-                <p>info@adrenalinepicker.com</p>
-                <p>+371 22000009</p>
-                <p>Rīgas street 5, Rīga, Latvia</p>
-                <p>© 2021 Copyright: Adventure Corp. All rights reserved.</p>
-            </div>
+    </div>
+
+    <div class="row footer-row mt-5">
+        <div class="footer-text my-3 text-center">
+            <h5>Contacts</h5>
+            <p>info@adrenalinepicker.com</p>
+            <p>+371 22000009</p>
+            <p>Rīgas street 5, Rīga, Latvia</p>
+            <p>© 2021 Copyright: Adventure Corp. All rights reserved.</p>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-            crossorigin="anonymous"></script>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
