--- a/index.html
+++ b/index.html
@@ -45,136 +45,148 @@
             </nav>
         </div>
         <header class="image-container">
-            <p><h1>Adrenaline Picker</h1></p>
+            <p>
+            <h1>Adrenaline Picker</h1>
+            </p>
             <h6></h6>
-            <p><h6>Are you tired of daily routine? Are you looking for some new experience or new life approach? We are here for you! 
-            </h6></p>
-                <p><h6>Join our three-level complexity Adrenaline Picker program, choose one and embrace the world full of fascinating adventures.</h6></p>
-                <p><h4>Future is now.</h4></p>
+            <p>
+            <h6>Are you tired of daily routine? Are you looking for some new experience or new life approach? We are
+                here for you!
+            </h6>
+            </p>
+            <p>
+            <h6>Join our three-level complexity Adrenaline Picker program, choose one and embrace the world full of
+                fascinating adventures.</h6>
+            </p>
+            <p>
+            <h4>Future is now.</h4>
+            </p>
         </header>
 
         <div class="row all-carousels-row mx-sm-0 mx-md-3 mx-lg-5 mx-xl-5 px-sm-0 px-md-3 px-lg-5 px-xl-5">
-            <div class="card mt-5 p-0 carousel-1-and-description-card">
-                <div id="carouselExampleIndicators" class="carousel slide card-img-top" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                            class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                            aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                            aria-label="Slide 3"></button>
+            <div class="col mx-5 px-5">
+                <div class="card mt-5 p-0 carousel-1-and-description-card">
+                    <div id="carouselExampleIndicators" class="carousel slide card-img-top" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                                class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                                aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                                aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="./images/low_adrenaline_adventure/136.jpg" class="d-block w-100" alt="Canada">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./images/no bildes/green-island-beach-background-1920x600-275.jpg"
+                                    class="d-block w-100" alt="Oceania">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./Images/no bildes/oceania.jpg" class="d-block w-100" alt="Switzerland">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
                     </div>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="./images/no bildes/2461292.jpg" class="d-block w-100" alt="Canada">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./images/no bildes/green-island-beach-background-1920x600-275.jpg"
-                                class="d-block w-100" alt="Oceania">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./Images/no bildes/oceania.jpg" class="d-block w-100" alt="Switzerland">
-                        </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional
+                            content. This content is a little bit longer.</p>
+                        <a href="#" class="btn btn-primary">Price</a>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
                 </div>
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional
-                        content. This content is a little bit longer.</p>
-                    <a href="#" class="btn btn-primary">Price</a>
-                </div>
-            </div>
-            <div class="card mt-5 p-0 carousel-1-and-description-card">
-                <div id="carouselExampleIndicators" class="carousel slide card-img-top" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                            class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                            aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                            aria-label="Slide 3"></button>
+                <div class="card mt-5 p-0 carousel-1-and-description-card">
+                    <div id="carouselExampleIndicators" class="carousel slide card-img-top" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                                class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                                aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                                aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="./images/no bildes/2461292.jpg" class="d-block w-100" alt="Canada">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./images/no bildes/green-island-beach-background-1920x600-275.jpg"
+                                    class="d-block w-100" alt="Oceania">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./Images/no bildes/oceania.jpg" class="d-block w-100" alt="Switzerland">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
                     </div>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="./images/no bildes/2461292.jpg" class="d-block w-100" alt="Canada">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./images/no bildes/green-island-beach-background-1920x600-275.jpg"
-                                class="d-block w-100" alt="Oceania">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./Images/no bildes/oceania.jpg" class="d-block w-100" alt="Switzerland">
-                        </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional
+                            content. This content is a little bit longer.</p>
+                        <a href="#" class="btn btn-primary">Price</a>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
                 </div>
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional
-                        content. This content is a little bit longer.</p>
-                    <a href="#" class="btn btn-primary">Price</a>
-                </div>
-            </div>
-            <div class="card mt-5 p-0 carousel-1-and-description-card">
-                <div id="carouselExampleIndicators" class="carousel slide card-img-top" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                            class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                            aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                            aria-label="Slide 3"></button>
+                <div class="card mt-5 p-0 carousel-1-and-description-card">
+                    <div id="carouselExampleIndicators" class="carousel slide card-img-top" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                                class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                                aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                                aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="./images/no bildes/2461292.jpg" class="d-block w-100" alt="Canada">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./images/no bildes/green-island-beach-background-1920x600-275.jpg"
+                                    class="d-block w-100" alt="Oceania">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./Images/no bildes/oceania.jpg" class="d-block w-100" alt="Switzerland">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
                     </div>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="./images/no bildes/2461292.jpg" class="d-block w-100" alt="Canada">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./images/no bildes/green-island-beach-background-1920x600-275.jpg"
-                                class="d-block w-100" alt="Oceania">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./Images/no bildes/oceania.jpg" class="d-block w-100" alt="Switzerland">
-                        </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional
+                            content. This content is a little bit longer.</p>
+                        <a href="#" class="btn btn-primary">Price</a>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div>
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional
-                        content. This content is a little bit longer.</p>
-                    <a href="#" class="btn btn-primary">Price</a>
                 </div>
             </div>
         </div>
